Stop status text from overflowing

--- a/src/app/pages/main/peer/peer.page.scss
+++ b/src/app/pages/main/peer/peer.page.scss
@@ -79,6 +79,7 @@ ion-item ion-icon {
   border-radius: 28px;
   bottom: calc(12px + var(--ion-safe-area-bottom));
   height: 56px;
+  justify-content: end;
   left: 0;
   margin: auto;
   max-width: $max-width;
@@ -86,4 +87,9 @@ ion-item ion-icon {
   right: 0;
   width: calc(100% - 24px);
   z-index: 3;
+}
+
+.status-message {
+  position: fixed;
+  left: 12px;
 }
